# next-shuttle-template

./: .gitignore  README.md  next.config.js  package-lock.json  package.json
app/: head.tsx  layout.tsx
backend/: Cargo.toml
backend/src/: main.rs
src/app/: layout.tsx  page.tsx
