[package]
name = "next-shuttle-template"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
axum-extra = { version = "0.4.2", features = ["spa"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
shuttle-axum = "0.19.0"
shuttle-runtime = "0.19.0"
shuttle-static-folder = "0.19.0"
tokio = "1.28.2"
