[package]
name = "next-shuttle-template"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shuttle-axum = "0"
shuttle-runtime = "0"
shuttle-static-folder = "0"
tokio = "1"
tower-http = { version = "0", features = ["fs"] }